--- a/client/src/App.css
+++ b/client/src/App.css
@@ -105,6 +105,12 @@ body {
 
 }
 
+.new-qty-label {
+ font-size: 30px;
+ font-weight: 100;
+ padding-right: .2em;
+}
+
 .new-qty {
   width:50px;
   font-size: 20px;
